--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@ $blackHover: #444c52;
             width: 200px;
             height: 200px;
             border-radius: 50%;
+            border: 4px solid $blackV2;
         }
     
         .social-media {
