--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,48 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.overlay {
+  position: fixed;
+  /* Sit on top of the page content */
+  display: block;
+  /* Hidden by default */
+  width: 100%;
+  /* Full width (cover the whole page) */
+  height: 100%;
+  /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Black background with opacity */
+  z-index: 10;
+  /* Specify a stack order in case you're using a different order for other elements */
+}
+
+.loading-spinner {
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  border: 3px solid #fbc531;
+  border-radius: 50%;
+  border-top-color: white;
+  animation: 0.5s spin infinite ease;
+  position: fixed;
+  top: -100%;
+  right: -100%;
+  left: -100%;
+  bottom: -100%;
+  margin: auto;
+  z-index: 100;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .home {
   background-color: white;
   height: 100vh;
