create sticky navbar and change spinner color

--- a/css/style.css
+++ b/css/style.css
@@ -8,28 +8,22 @@
 
 .overlay {
   position: fixed;
-  /* Sit on top of the page content */
   display: block;
-  /* Hidden by default */
   width: 100%;
-  /* Full width (cover the whole page) */
   height: 100%;
-  /* Full height (cover the whole page) */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  /* Black background with opacity */
+  background-color: black;
   z-index: 10;
-  /* Specify a stack order in case you're using a different order for other elements */
 }
 
 .loading-spinner {
   width: 100px;
   height: 100px;
   display: inline-block;
-  border: 3px solid #fbc531;
+  border: 5px solid #45a048;
   border-radius: 50%;
   border-top-color: white;
   animation: 0.5s spin infinite ease;
@@ -114,5 +108,40 @@
 
 .home .hero p {
   font-weight: 300;
+}
+
+.navbar-fixed {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+}
+
+nav .navbar {
+  background-color: #1e272e;
+  height: 60px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav .navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+nav .navbar ul li {
+  margin: 0 12px;
+}
+
+nav .navbar ul li a {
+  color: white;
+  text-decoration: none;
+  transition: .2s;
+}
+
+nav .navbar ul li a:hover {
+  color: #45a048;
 }
 /*# sourceMappingURL=style.css.map */
