--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,24 +15,23 @@ $blackHover: #444c52;
 }
 
 .overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: block; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 10; /* Specify a stack order in case you're using a different order for other elements */
-    // cursor: pointer; /* Add a pointer on hover */
+    background-color: $black;
+    z-index: 10;
 }
 
 .loading-spinner {
     width: 100px;
     height: 100px;
     display: inline-block;
-    border: 3px solid #fbc531;
+    border: 5px solid $green;
     border-radius: 50%;
     border-top-color: $white;
     animation: 0.5s spin infinite ease;
@@ -116,6 +115,43 @@ $blackHover: #444c52;
 
         p {
             font-weight: 300;
+        }
+    }
+}
+
+.navbar-fixed {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+}
+
+nav {
+    .navbar {
+        background-color: $blackV2;
+        height: 60px;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        ul {
+            display: flex;
+            list-style: none;
+
+            li {
+                margin: 0 12px;
+
+                a {
+                    color: $white;
+                    text-decoration: none;
+                    transition: .2s;
+
+                    &:hover {   
+                        color: $green;
+                    }
+                }
+            }
         }
     }
 }
