--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,15 @@
 
 .overlay {
   position: fixed;
-  display: block;
+  display: none;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: black;
-  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
 }
 
 .loading-spinner {
@@ -40,6 +40,85 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.hamburger {
+  position: fixed;
+  right: 0;
+}
+
+.hamburger svg {
+  cursor: pointer;
+  margin: 5px;
+  width: 35px;
+  height: 35px;
+}
+
+.sidebar-active {
+  right: 0;
+}
+
+nav div {
+  background: black;
+  width: 220px;
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  height: 100%;
+  display: flex;
+  overflow-x: hidden;
+  right: -220px;
+  transition: 0.3s;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+nav div ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+nav div ul li {
+  padding: 20px 0;
+}
+
+nav div ul li a {
+  text-decoration: none;
+  color: white;
+  display: inline-block;
+}
+
+nav div ul li a::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: white;
+  transition: width .2s;
+}
+
+nav div ul li a:hover::after {
+  width: 100%;
+}
+
+nav div .hire-me {
+  padding: 10px 22px;
+  background: #f39c12;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+  color: white;
+  text-decoration: none;
+}
+
+nav div .hire-me:hover {
+  background: #f1c40f;
 }
 
 .home {
@@ -110,38 +189,12 @@
   font-weight: 300;
 }
 
-.navbar-fixed {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-}
-
-nav .navbar {
-  background-color: #1e272e;
-  height: 60px;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-nav .navbar ul {
-  display: flex;
-  list-style: none;
-}
-
-nav .navbar ul li {
-  margin: 0 12px;
-}
-
-nav .navbar ul li a {
-  color: white;
-  text-decoration: none;
-  transition: .2s;
-}
-
-nav .navbar ul li a:hover {
-  color: #45a048;
+@media only screen and (max-width: 768px) {
+  nav .navbar button {
+    display: block;
+  }
+  nav .navbar ul {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
