--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,15 +16,15 @@ $blackHover: #444c52;
 
 .overlay {
     position: fixed;
-    display: block;
+    display: none;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: $black;
-    z-index: 10;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 5;
 }
 
 .loading-spinner {
@@ -49,6 +49,89 @@ $blackHover: #444c52;
         transform: rotate(360deg);
     }
 }
+
+.hamburger {
+    position: fixed;
+    right: 0;
+
+    svg {
+        cursor: pointer;
+        margin: 5px;
+        width: 35px;
+        height: 35px;
+    }
+}
+
+.sidebar-active {
+    right: 0;
+}
+
+nav {
+    div {
+        background: $black;
+        width: 220px;
+        position: fixed;
+        z-index: 10;
+        right: 0;
+        height: 100%;
+        display: flex;
+        overflow-x: hidden;
+        right: -220px;
+        transition: 0.3s;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        
+        ul {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            
+            li {
+                padding: 20px 0;
+
+                a {
+                    text-decoration: none;
+                    color: $white;
+                    display: inline-block;
+
+                    
+                    &::after {
+                        content: '';
+                        display: block;
+                        width: 0;
+                        height: 2px;
+                        background: $white;
+                        transition: width .2s;
+                    }
+                    
+                    &:hover::after {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+        .hire-me {
+            padding: 10px 22px;
+            background: #f39c12;
+            outline: none;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.2s;
+            color: $white;
+            text-decoration: none;
+
+            &:hover {
+                background: #f1c40f;
+            }
+        }
+    }
+}
+
 
 .home {
     background-color: $white;
@@ -119,38 +202,15 @@ $blackHover: #444c52;
     }
 }
 
-.navbar-fixed {
-    position: fixed;
-    z-index: 100;
-    top: 0;
-}
-
-nav {
-    .navbar {
-        background-color: $blackV2;
-        height: 60px;
-        left: 0;
-        right: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        ul {
-            display: flex;
-            list-style: none;
-
-            li {
-                margin: 0 12px;
-
-                a {
-                    color: $white;
-                    text-decoration: none;
-                    transition: .2s;
-
-                    &:hover {   
-                        color: $green;
-                    }
-                }
+@media only screen and (max-width: 768px) {
+    nav {
+        .navbar {
+            button {
+                display: block;
+            }
+            
+            ul {
+                display: none;
             }
         }
     }
