--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,10 @@ $blackHover: #444c52;
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .overlay {
     position: fixed;
     display: none;
@@ -53,12 +57,13 @@ $blackHover: #444c52;
 .hamburger {
     position: fixed;
     right: 0;
+    z-index: 10;
 
     svg {
         cursor: pointer;
         margin: 5px;
-        width: 35px;
-        height: 35px;
+        width: 40px;
+        height: 40px;
     }
 }
 
@@ -133,7 +138,7 @@ nav {
 }
 
 
-.home {
+#home {
     background-color: $white;
     height: 100vh;
     
@@ -202,6 +207,103 @@ nav {
     }
 }
 
+#about{
+    padding: 80px 0;
+    background-color: $black;
+    color: $white;
+
+    h2, p {
+        text-align: center;
+    }
+}
+
+#skills {
+
+    h2 {
+        text-align: center;
+    }
+
+    p {
+        display: flex; 
+        align-items: center;
+        font-size: 1.1rem;
+        text-align: center;
+    }
+
+    img {
+        width: 68px; 
+        height: 68px;
+    }
+}
+
+
+#personal-project {
+    background-color: $black;
+    color: $white;
+    text-align: center;
+    padding: 50px 0;
+
+    .col-md-4 {
+        display: flex;
+        justify-content: center;
+    }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 50%;
+        max-height: 10%;
+
+        img {
+            width: 100%;
+        }
+
+        &:hover {
+          box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        }
+        
+        .container {
+          padding: 2px 16px;
+        }
+    }
+
+    a {
+        text-decoration: none;
+        color: $white;
+        // display: flex;
+        // justify-content: flex-end;
+    }
+      
+}
+
+#footer {
+    text-align: center;
+    background-color: $black;
+    color: $white;
+    padding: 25px 0;
+
+    .hire-me-bot{
+        padding: 10px 22px;
+        background: #f39c12;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.2s;
+        text-decoration: none;
+        margin-bottom: 25px;
+
+        a{
+            color: $white;
+            text-decoration: none;
+        }
+
+        &:hover {
+            background: #f1c40f;
+        }
+    }
+}
+
 @media only screen and (max-width: 768px) {
     nav {
         .navbar {
@@ -212,6 +314,17 @@ nav {
             ul {
                 display: none;
             }
+        }
+    }
+
+    #skills {
+        p {
+            font-size: 1rem;
+        }
+
+        img {
+            width: 50px;
+            height: 50px;
         }
     }
 }
