--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Space Mono', monospace;
 }
 
 html {
@@ -170,7 +172,7 @@ nav div .hire-me:hover {
   background-color: #444c52;
 }
 
-#home .hero .download-resume {
+#home .hero .download-cv {
   padding: 10px 25px;
   outline: none;
   cursor: pointer;
@@ -178,10 +180,12 @@ nav div .hire-me:hover {
   border: none;
   border-radius: 5px;
   color: white;
+  letter-spacing: 1px;
+  text-decoration: none;
   transition: .1s;
 }
 
-#home .hero .download-resume:hover {
+#home .hero .download-cv:hover {
   background-color: #444c52;
 }
 
