--- a/css/style.css
+++ b/css/style.css
@@ -140,10 +140,11 @@ nav div .hire-me:hover {
 }
 
 #home .hero .img-author {
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   border-radius: 50%;
   border: 4px solid #1e272e;
+  object-fit: cover;
 }
 
 #home .hero .social-media {
