--- a/css/style.css
+++ b/css/style.css
@@ -112,22 +112,6 @@ nav div ul li a:hover::after {
   width: 100%;
 }
 
-nav div .hire-me {
-  padding: 10px 22px;
-  background: #f39c12;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-  color: white;
-  text-decoration: none;
-}
-
-nav div .hire-me:hover {
-  background: #f1c40f;
-}
-
 #home {
   background-color: white;
   height: 100vh;
@@ -241,24 +225,40 @@ nav div .hire-me:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 50%;
-  max-height: 10%;
 }
 
 #personal-project .card img {
   width: 100%;
+  border-radius: 12px;
 }
 
 #personal-project .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-#personal-project .card .container {
-  padding: 2px 16px;
+#personal-project .card .project-info h4 {
+  margin: 10px 0;
 }
 
 #personal-project a {
   text-decoration: none;
   color: white;
+}
+
+.contact-button {
+  padding: 10px 22px;
+  background: #f39c12;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+  color: white;
+  text-decoration: none;
+}
+
+.contact-button:hover {
+  background: #f1c40f;
 }
 
 #footer {
@@ -268,25 +268,8 @@ nav div .hire-me:hover {
   padding: 25px 0;
 }
 
-#footer .hire-me-bot {
-  padding: 10px 22px;
-  background: #f39c12;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-  text-decoration: none;
-  margin-bottom: 25px;
-}
-
-#footer .hire-me-bot a {
-  color: white;
-  text-decoration: none;
-}
-
-#footer .hire-me-bot:hover {
-  background: #f1c40f;
+#footer p {
+  margin-top: 20px;
 }
 
 @media only screen and (max-width: 768px) {
