--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,22 +120,6 @@ nav {
                 }
             }
         }
-
-        .hire-me {
-            padding: 10px 22px;
-            background: #f39c12;
-            outline: none;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: 0.2s;
-            color: $white;
-            text-decoration: none;
-
-            &:hover {
-                background: #f1c40f;
-            }
-        }
     }
 }
 
@@ -257,19 +241,22 @@ nav {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         width: 50%;
-        max-height: 10%;
 
         img {
             width: 100%;
+            border-radius: 12px;
         }
 
         &:hover {
           box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
-        
-        .container {
-          padding: 2px 16px;
+
+        .project-info {
+            h4 {
+                margin: 10px 0;
+            }
         }
+        
     }
 
     a {
@@ -281,31 +268,30 @@ nav {
       
 }
 
+.contact-button {
+    padding: 10px 22px;
+    background: #f39c12;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.2s;
+    color: $white;
+    text-decoration: none;
+
+    &:hover {
+        background: #f1c40f;
+    }
+}
+
 #footer {
     text-align: center;
     background-color: $black;
     color: $white;
     padding: 25px 0;
 
-    .hire-me-bot{
-        padding: 10px 22px;
-        background: #f39c12;
-        outline: none;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: 0.2s;
-        text-decoration: none;
-        margin-bottom: 25px;
-
-        a{
-            color: $white;
-            text-decoration: none;
-        }
-
-        &:hover {
-            background: #f1c40f;
-        }
+    p {
+        margin-top: 20px;
     }
 }
 
