--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
@@ -47,13 +48,12 @@ html {
     transform: rotate(360deg);
   }
 }
-
 .hamburger {
   position: fixed;
   right: 0;
   z-index: 10;
+  display: none;
 }
-
 .hamburger svg {
   cursor: pointer;
   margin: 5px;
@@ -80,7 +80,6 @@ nav div {
   flex-direction: column;
   align-items: center;
 }
-
 nav div ul {
   list-style: none;
   display: flex;
@@ -88,26 +87,22 @@ nav div ul {
   align-items: center;
   justify-content: center;
 }
-
 nav div ul li {
   padding: 20px 0;
 }
-
 nav div ul li a {
   text-decoration: none;
   color: white;
   display: inline-block;
 }
-
 nav div ul li a::after {
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 2px;
   background: white;
-  transition: width .2s;
+  transition: width 0.2s;
 }
-
 nav div ul li a:hover::after {
   width: 100%;
 }
@@ -116,47 +111,41 @@ nav div ul li a:hover::after {
   background-color: white;
   height: 100vh;
 }
-
 #home .hero {
   text-align: center;
   position: relative;
-  top: 80px;
+  top: 50%;
+  transform: translateY(-50%);
 }
-
 #home .hero .img-author {
   width: 180px;
   height: 180px;
   border-radius: 50%;
-  border: 4px solid #1e272e;
+  border: 4px solid black;
   object-fit: cover;
 }
-
 #home .hero .social-media {
   display: flex;
   justify-content: center;
   margin: 40px 0;
 }
-
 #home .hero .social-media a {
   text-decoration: none;
-  background-color: #1e272e;
+  background-color: black;
   padding: 12px;
   margin: 0 10px;
   display: flex;
   border-radius: 50%;
   text-decoration: none;
-  transition: .1s;
+  transition: 0.1s;
 }
-
 #home .hero .social-media a i {
   font-size: 20px;
   color: #eaeaea;
 }
-
 #home .hero .social-media a:hover {
   background-color: #444c52;
 }
-
 #home .hero .download-cv {
   padding: 10px 25px;
   outline: none;
@@ -167,18 +156,16 @@ nav div ul li a:hover::after {
   color: white;
   letter-spacing: 1px;
   text-decoration: none;
-  transition: .1s;
+  transition: 0.1s;
 }
-
 #home .hero .download-cv:hover {
   background-color: #444c52;
 }
-
-#home .hero h2, #home .hero p {
+#home .hero h2,
+#home .hero p {
   margin-top: 10px;
   color: #1e272e;
 }
-
 #home .hero p {
   font-weight: 300;
 }
@@ -188,22 +175,23 @@ nav div ul li a:hover::after {
   background-color: black;
   color: white;
 }
-
-#about h2, #about p {
+#about h2,
+#about p {
   text-align: center;
 }
 
+#skills {
+  padding: 50px 0;
+}
 #skills h2 {
   text-align: center;
 }
-
 #skills p {
   display: flex;
   align-items: center;
   font-size: 1.1rem;
   text-align: center;
 }
-
 #skills img {
   width: 68px;
   height: 68px;
@@ -215,34 +203,32 @@ nav div ul li a:hover::after {
   text-align: center;
   padding: 50px 0;
 }
-
 #personal-project .col-md-4 {
   display: flex;
   justify-content: center;
 }
-
 #personal-project .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgb(26, 26, 26);
   transition: 0.3s;
-  width: 50%;
+  padding: 50px;
+  border-radius: 15px;
 }
-
 #personal-project .card img {
   width: 100%;
-  border-radius: 12px;
+  border-radius: 15px;
 }
-
 #personal-project .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  transform: rotate(2deg);
 }
-
 #personal-project .card .project-info h4 {
   margin: 10px 0;
 }
-
 #personal-project a {
   text-decoration: none;
   color: white;
+}
+#personal-project a:hover {
+  color: #f39c12;
 }
 
 .contact-button {
@@ -256,7 +242,6 @@ nav div ul li a:hover::after {
   color: white;
   text-decoration: none;
 }
-
 .contact-button:hover {
   background: #f1c40f;
 }
@@ -267,7 +252,6 @@ nav div ul li a:hover::after {
   color: white;
   padding: 25px 0;
 }
-
 #footer p {
   margin-top: 20px;
 }
@@ -286,5 +270,4 @@ nav div ul li a:hover::after {
     width: 50px;
     height: 50px;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
