--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
 $black: #24252a;
 $white: white;
@@ -10,318 +10,324 @@ $blackV2: #1e272e;
 $blackHover: #444c52;
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Space Mono", monospace;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Space Mono', monospace;
 }
 
 html {
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .overlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 5;
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
 }
 
 .loading-spinner {
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-    border: 5px solid $green;
-    border-radius: 50%;
-    border-top-color: $white;
-    animation: 0.5s spin infinite ease;
-    position: fixed;
-    top: -100%;
-    right: -100%;
-    left: -100%;
-    bottom: -100%;
-    margin: auto;
-    z-index: 100;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  border: 5px solid $green;
+  border-radius: 50%;
+  border-top-color: $white;
+  animation: 0.5s spin infinite ease;
+  position: fixed;
+  top: -100%;
+  right: -100%;
+  left: -100%;
+  bottom: -100%;
+  margin: auto;
+  z-index: 100;
 }
 
 @keyframes spin {
-    to {
-        transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .hamburger {
-    position: fixed;
-    right: 0;
-    z-index: 10;
-    display: none;
+  position: fixed;
+  right: 0;
+  z-index: 10;
+  display: none;
 
-    svg {
-        cursor: pointer;
-        margin: 5px;
-        width: 40px;
-        height: 40px;
-    }
+  svg {
+    cursor: pointer;
+    margin: 5px;
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .sidebar-active {
-    right: 0;
+  right: 0;
 }
 
 nav {
-    div {
-        background: black;
-        width: 220px;
-        position: fixed;
-        z-index: 10;
-        right: 0;
-        height: 100%;
-        display: flex;
-        overflow-x: hidden;
-        right: -220px;
-        transition: 0.3s;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
+  div {
+    background: black;
+    width: 220px;
+    position: fixed;
+    z-index: 10;
+    right: 0;
+    height: 100%;
+    display: flex;
+    overflow-x: hidden;
+    right: -220px;
+    transition: 0.3s;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
-        ul {
-            list-style: none;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+    ul {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
 
-            li {
-                padding: 20px 0;
+      li {
+        padding: 20px 0;
 
-                a {
-                    text-decoration: none;
-                    color: $white;
-                    display: inline-block;
+        a {
+          text-decoration: none;
+          color: $white;
+          display: inline-block;
 
-                    &::after {
-                        content: "";
-                        display: block;
-                        width: 0;
-                        height: 2px;
-                        background: $white;
-                        transition: width 0.2s;
-                    }
+          &::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 2px;
+            background: $white;
+            transition: width 0.2s;
+          }
 
-                    &:hover::after {
-                        width: 100%;
-                    }
-                }
-            }
+          &:hover::after {
+            width: 100%;
+          }
         }
+      }
     }
+  }
 }
 
 #home {
-    background-color: $white;
-    height: 100vh;
+  background-color: $white;
+  height: 100vh;
 
-    .hero {
-        text-align: center;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
+  .hero {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 
-        .img-author {
-            width: 180px;
-            height: 180px;
-            border-radius: 50%;
-            border: 4px solid black;
-            object-fit: cover;
-        }
-
-        .social-media {
-            display: flex;
-            justify-content: center;
-            margin: 40px 0;
-
-            a {
-                text-decoration: none;
-                background-color: black;
-                padding: 12px;
-                margin: 0 10px;
-                display: flex;
-                border-radius: 50%;
-                text-decoration: none;
-                transition: 0.1s;
-
-                i {
-                    font-size: 20px;
-                    color: #eaeaea;
-                }
-
-                &:hover {
-                    background-color: $blackHover;
-                }
-            }
-        }
-
-        .download-cv {
-            padding: 10px 25px;
-            outline: none;
-            cursor: pointer;
-            background-color: $blackV2;
-            border: none;
-            border-radius: 5px;
-            color: $white;
-            letter-spacing: 1px;
-            text-decoration: none;
-            transition: 0.1s;
-
-            &:hover {
-                background-color: $blackHover;
-            }
-        }
-
-        h2,
-        p {
-            margin-top: 10px;
-            color: $blackV2;
-        }
-
-        p {
-            font-weight: 300;
-        }
+    .img-author {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      border: 4px solid black;
+      object-fit: cover;
     }
-}
 
-#about {
-    padding: 80px 0;
-    background-color: black;
-    color: $white;
+    .social-media {
+      display: flex;
+      justify-content: center;
+      margin: 40px 0;
+
+      a {
+        text-decoration: none;
+        background-color: black;
+        padding: 12px;
+        margin: 0 10px;
+        display: flex;
+        border-radius: 50%;
+        text-decoration: none;
+        transition: 0.1s;
+
+        i {
+          font-size: 20px;
+          color: #eaeaea;
+        }
+
+        &:hover {
+          background-color: $blackHover;
+        }
+      }
+    }
+
+    .download-cv {
+      padding: 10px 25px;
+      outline: none;
+      cursor: pointer;
+      background-color: $blackV2;
+      border: none;
+      border-radius: 5px;
+      color: $white;
+      letter-spacing: 1px;
+      text-decoration: none;
+      transition: 0.1s;
+
+      &:hover {
+        background-color: $blackHover;
+      }
+    }
 
     h2,
     p {
-        text-align: center;
+      margin-top: 10px;
+      color: $blackV2;
     }
+
+    p {
+      font-weight: 300;
+    }
+  }
+}
+
+#about {
+  padding: 80px 0;
+  background-color: black;
+  color: $white;
+
+  h2,
+  p {
+    text-align: center;
+  }
 }
 
 #skills {
-    padding: 50px 0;
+  padding: 50px 0;
 
-    h2 {
-        text-align: center;
-    }
+  h2 {
+    text-align: center;
+  }
 
-    p {
-        display: flex;
-        align-items: center;
-        font-size: 1.1rem;
-        text-align: center;
-    }
+  p {
+    display: flex;
+    align-items: center;
+    font-size: 1.1rem;
+    text-align: center;
+  }
 
-    img {
-        width: 68px;
-        height: 68px;
+  img {
+    width: 68px;
+    height: 68px;
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      transform: rotate(5deg);
     }
+  }
 }
 
 #personal-project {
-    background-color: black;
+  background-color: black;
+  color: $white;
+  text-align: center;
+  padding: 50px 0;
+
+  .col-md-4 {
+    display: flex;
+    justify-content: center;
+  }
+
+  .card {
+    background-color: rgb(26, 26, 26);
+    transition: 0.3s;
+    // width: 50%;
+    padding: 50px;
+    border-radius: 15px;
+
+    img {
+      width: 70%;
+      border-radius: 15px;
+    }
+
+    &:hover {
+      transform: rotate(2deg);
+    }
+
+    .project-info {
+      h4 {
+        margin: 10px 0;
+      }
+    }
+  }
+
+  a {
+    text-decoration: none;
     color: $white;
-    text-align: center;
-    padding: 50px 0;
+    // display: flex;
+    // justify-content: flex-end;
 
-    .col-md-4 {
-        display: flex;
-        justify-content: center;
+    &:hover {
+      color: #f39c12;
     }
-
-    .card {
-        background-color: rgb(26, 26, 26);
-        transition: 0.3s;
-        // width: 50%;
-        padding: 50px;
-        border-radius: 15px;
-
-        img {
-            width: 100%;
-            border-radius: 15px;
-        }
-
-        &:hover {
-          transform: rotate(2deg);
-        }
-
-        .project-info {
-            h4 {
-                margin: 10px 0;
-            }
-        }
-    }
-
-    a {
-        text-decoration: none;
-        color: $white;
-        // display: flex;
-        // justify-content: flex-end;
-
-        &:hover {
-            color: #f39c12;
-        }
-    }
+  }
 }
 
 .contact-button {
-    padding: 10px 22px;
-    background: #f39c12;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.2s;
-    color: $white;
-    text-decoration: none;
+  padding: 10px 22px;
+  background: #f39c12;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+  color: $white;
+  text-decoration: none;
 
-    &:hover {
-        background: #f1c40f;
-    }
+  &:hover {
+    background: #f1c40f;
+  }
 }
 
 #footer {
-    text-align: center;
-    background-color: black;
-    color: $white;
-    padding: 25px 0;
+  text-align: center;
+  background-color: black;
+  color: $white;
+  padding: 25px 0;
 
-    p {
-        margin-top: 20px;
-    }
+  p {
+    margin-top: 20px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    nav {
-        .navbar {
-            button {
-                display: block;
-            }
+  nav {
+    .navbar {
+      button {
+        display: block;
+      }
 
-            ul {
-                display: none;
-            }
-        }
+      ul {
+        display: none;
+      }
+    }
+  }
+
+  #skills {
+    p {
+      font-size: 1rem;
     }
 
-    #skills {
-        p {
-            font-size: 1rem;
-        }
-
-        img {
-            width: 50px;
-            height: 50px;
-        }
+    img {
+      width: 50px;
+      height: 50px;
     }
+  }
 }
