--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ nav div ul li a:hover::after {
   color: #f39c12;
 }
 
-.contact-button {
+.connect-button {
   padding: 10px 22px;
   background: #f39c12;
   outline: none;
@@ -247,7 +247,7 @@ nav div ul li a:hover::after {
   color: white;
   text-decoration: none;
 }
-.contact-button:hover {
+.connect-button:hover {
   background: #f1c40f;
 }
 
